# ros2_iio_medical

./: CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package.xml
.github/workflows/: ci.yml
docs/: HARDWARE.md
include/ros2_iio_medical/: iio_bridge.hpp  iio_triggered_buffer.hpp
launch/: iio_bridge.launch.py  iio_triggered_bridge.launch.py
src/: iio_bridge.cpp  iio_triggered_buffer.cpp
test/: simulate_ads1299.sh
