<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_iio_medical</name>
  <version>0.1.0</version>
  <description>
    ROS2 bridge between Linux IIO medical biosignal devices and ROS2 topics.
    Supports ADS1299 (EEG/ECG), MAX86150 (ECG/PPG), ti-ads1298 (ECG),
    and any Linux IIO device with standard sysfs or triggered buffer interface.
    Intended for medical robotics and surgical monitoring applications.
  </description>

  <maintainer email="shofiqtest@gmail.com">Md Shofiqul Islam</maintainer>

  <license>Apache-2.0</license>

  <url type="repository">https://github.com/shofiqtest/ros2_iio_medical</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
